# GeRot

./: .gitignore  AMC_holding.py  AMC_oneleg_newapi.py  AMC_track_oneleg.py  Anytry.py  README.md  TargetGenerator.py  Target_Generator.py  dxl_api.py  gecko_amc.py  gecko_pc.py  generate_pNv_array_2in1.m  gero.py  moveto.py  mt_dxl.py  pNv_array.csv  position_control.py  target_array.py  target_array_dia.py  target_array_dna.py  target_array_left_new.py  target_p.csv  target_v.csv
API/Ros_Interface/catkin_ws/devel/: .catkin  setup.sh
API/Ros_Interface/controllers/geckoboti/locomotion_control_GeRot/: Basic_cpg_controller.cpp  Basic_cpg_controller.h  Delay_line.cpp  Delay_line.h  ModularNeuralControl.h  Pcpg_controller.cpp  main_gecko_controller.cpp  pcpg.cpp  pcpg.h  rbf.cpp  rbf.h
API/Ros_Interface/projects/geckoboti/: README
API/TargetGenerator/: Target_generator_xlversion.py  t_rec.csv  target_p_left.csv  target_v_left.csv
API/dynamixel-egg/dynamixel.egg-info/: SOURCES.txt  top_level.txt
API/dynamixel_cpp Ver2.0/: CMakeLists.txt  Doxyfile  README.md
API/dynamixel_cpp Ver2.0/include/: dynamixel.h
API/dynamixel_cpp Ver2.0/src/: admitance_controller.cpp  dynamixel.cpp  test.cpp
API/dynamixel_cpp_version/: CMakeLists.txt  README.md
API/dynamixel_cpp_version/include/: motor.h
API/dynamixel_cpp_version/src/: motor.cpp  test.cpp
DS4controller/: ds4_recv.py  setup.py
DS4controller/ds4drv/: ds4.py
DS4controller/ds4drv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Experiment/: calc_torque_rec.csv  gecko_with_controller.py  mt_dxl.py  target_p.csv
ExperimentData/: Experiment1 F_{N,ep}.xlsx
Experiment_data/: Experiment2 Glass.xlsx  Experiment2 Teflon.xlsx
Model/: GeRo_Body.stp  cam_holder.STL  part2.stl
Ros_Interface/catkin_ws/devel/: .rosinstall
Ros_Interface/catkin_ws/devel/lib/pkgconfig/: Dynamixel_Ros_Interface.pc
Ros_Interface/catkin_ws/src/dynamixel_ros_interface/: .package.xml.swp  CMakeLists.txt
Ros_Interface/catkin_ws/src/dynamixel_ros_interface/src/: signal_to_motors.py
Ros_Interface/catkin_ws/src/my_test/: CMakeLists.txt
Ros_Interface/controllers/geckoboti/locomotion_control_GeRot/: Delay_line.cpp  Delay_line.h  ModularNeuralControl.cpp  ModularNeuralControl.h  Pcpg_controller.h  main_gecko_controller.cpp  pcpg.cpp  pcpg.h
Ros_Interface/projects/: .gitignore
Ros_Interface/projects/geckoboti/: geckobot_GeRot.lua
Ros_Interface/projects/geckoboti/catkin_ws_GeRot/devel/: setup.sh
Ros_Interface/projects/geckoboti/catkin_ws_GeRot/devel_isolated/: setup.bash  setup.sh  setup.zsh
Ros_Interface/projects/geckoboti/catkin_ws_GeRot/src/gecko_controller_GeRot/: CMakeLists.txt
STL_Model/: part1.stl  part3.stl
Target_Generator/: Target_Generator.py  target_array.py  target_array_left_new.py
dynamixel-egg/: setup.py
dynamixel-egg/dynamixel/: Target_generator_xlversion.py  mt_dxl.py
dynamixel-egg/dynamixel.egg-info/: PKG-INFO  requires.txt
dynamixel_cpp_controller/: CMakeLists.txt
dynamixel_cpp_controller/include/: dynamixel.h
dynamixel_cpp_controller/lib/: libdxl_mac_cpp.dylib
dynamixel_cpp_controller/src/: admitance_controller.cpp  dynamixel.cpp
vary_exp/: AMC_holding_oneleg.py  AMC_oneleg_newapi.py  README.md  Target_Generator.py  amc_lgmd.py  calc_torque_rec.csv  current-torque calibrate.py  ds4.py  gecko_amc.py  gecko_pc.py  gecko_with_controller.py  target_para.csv  target_v.csv
(+885 files in other folders)
